@@ -1,6 +1,13 @@
 1.3.x (unreleased)
  * Removed use of Thrift describe_ring and replaced it with native Java Driver
    support for fetching TokenRanges (SPARKC-93)
+ * Support for converting Cassandra UDT column values to Scala case-class objects (SPARKC-4)
+   - Introduced a common interface for TableDef and UserDefinedType
+   - Removed ClassTag from ColumnMapper
+   - Removed by-index column references and replaced them with by-name ColumnRefs
+   - Created a GettableDataToMappedTypeConverter that can handle UDTs
+   - ClassBasedRowReader delegates object conversion instead of doing it by itself;
+     this improves unit-testability of code
 
 ********************************************************************************
 
